--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,4 +1,4 @@
-name: Test Project
+name: Deploy Project
 on: push
 jobs:
   test:
@@ -10,3 +10,15 @@ jobs:
         run: npm ci             #like install but lock the versions of npm packets
       - name: Test Project
         run: npm test
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get The Code
+        uses: actions/checkout@v4
+      - name: Install Project
+        run: npm ci
+      - name: Build Project
+        run: npm run build
+      - name: Deploy
+        run: echo "Deploying..."
